# bps

./: ATMS_explained.md  ATMS_lecture.pptx  generate_pdf.py  generate_pptx.py  justify_node_debug.py  new_nogood_explained.py  nogood_debug.py  weave_fp.py  weave_lecture.html  weave_trace.py
.claude/: settings.json  settings.local.json
atms/: EXPLAIN-UPDATE-LABEL.md  atms.lisp  create_comparison_ppt.py  create_incremental_ppt.py  create_label_ppt.py  create_ppt.py  create_weave_ppt.py  incremental-accumulation.pptx  node-label-characteristics.pptx  update-label-techniques.pptx  weave-fp.lisp  weave-techniques.pptx  weave-vs-update-label.pptx
atms/C/: Makefile  atest.c  atms.h  atre.c  atret.c  main.c  unify.h
atms/c/: atms.c  atre.h  planner.c  planner.h  unify.c
atms/cpp/: CMakeLists.txt  atest.cpp  atms.cpp  atms.h  atre.cpp  atre.h  atret.cpp  main.cpp  planner.cpp  planner.h  unify.cpp  unify.h
atms/go/: adata.go  ainter.go  aplanr.go  arules.go  atest.go  atms.go  atre_loader.go  atret.go  bcode.go  blocks.go  funify.go  go.mod  plan_a.go  plan_e.go  unify.go
atms/scheme/: adata.scm  ainter.scm  aplanr.scm  arules.scm  atms.scm  funify.scm  unify.scm
jtms/: jtms.lisp
jtms/c/: Makefile  funify.c  funify.h  jdata.c  (+27 more)
jtms/cpp/: CMakeLists.txt  jqueens.cpp  jsaint.cpp  jsaint.h  jtms.cpp  jtms.h  jtms_ex.cpp  jtre.cpp  jtre.h  main.cpp  match.cpp  match.h  simplify.cpp  simplify.h
ltms/: LTMS-ANALYSIS.md  LTMS_개념학습.pptx  TMS_비교_JTMS_LTMS_ATMS.pptx  TMS_자료구조_상세비교.pptx  generate_datastructure_ppt.py  generate_ltms_ppt.py  generate_tms_comparison_ppt.py
(+151 files in other folders)
